# SCENE

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Makefile  README.md  requirements.txt  scenescan.sh
.ci_scripts/: ci_build.sh
.github/workflows/: test.yml
Data/CTF_voss/: bdy.txt  bdy.txt~  ctf_voss.dat~  ctf_voss.ebweq  ctf_voss.elite  ctf_voss.helena  ctf_voss.lynton  ctf_voss.profs  ctf_voss.radat  ctf_voss.tokameq  ctf_voss_1.gs2  ctf_voss_2.gs2  fort.12  fort.26  fort.44  fort.56  fort.7  fort.716  fort.77  fort.82  interp.baleq  scene.dskbal
Data/CTF_voss_test/: bdy.txt  ctf_voss.dat~  ctf_voss.ebweq  ctf_voss.elite  ctf_voss.helena  ctf_voss.lynton  ctf_voss.profs  ctf_voss.radat  ctf_voss.tokameq  ctf_voss_1.gs2  ctf_voss_2.gs2  fort.12  fort.26  fort.44  fort.56  fort.7  fort.716  fort.77  fort.82  interp.baleq  scene.dskbal
Data/CTF_voss_test2/: bdy.txt  ctf_voss.ebweq  ctf_voss.elite  ctf_voss.helena  ctf_voss.lynton  ctf_voss.profs  ctf_voss.radat  ctf_voss.tokameq  ctf_voss_1.gs2  ctf_voss_2.gs2  fort.12  fort.26  fort.44  fort.56  fort.7  fort.716  fort.77  fort.82  interp.baleq  scene.dskbal
Data/CTFv1/: bdy.txt  bdy.txt~  ctfv1.cairns  ctfv1.dat~  ctfv1.ebweq  ctfv1.elite  ctfv1.helena  ctfv1.lynton  ctfv1.profs  ctfv1.radat  ctfv1.rob  ctfv1.tokameq  ctfv1_1.gs2  ctfv1_2.gs2  fort.12  fort.26  fort.44  fort.56  fort.7  fort.716  fort.73  fort.77  fort.82  interp.baleq  old_bdy.txt  scene.dskbal
Data/FNSF/: default.ps  fnsf.ebweq  fnsf.elite  fnsf.lynton  fnsf.radat  fnsf.rob  fnsf.tokameq  fnsf_1.gs2  fnsf_2.gs2  fort.12  fort.26  fort.44  fort.56  fort.7  fort.716  fort.73  fort.77  fort.82  interp.baleq  scene.dskbal  scenescan.sh~  scratch.grd
Data/FNSF_test/: bdytest.py  bdytest.py~  fnsf.ebweq  fnsf.elite  fnsf.geqdsk  fnsf.helena  fnsf.lynton  fnsf.profs  fnsf.radat  fnsf.tokameq  fnsf_1.gs2  fnsf_2.gs2  fort.12  fort.26  fort.44  fort.56  fort.7  fort.716  fort.77  fort.82  interp.baleq  scene.dskbal
Data/fiesta_MAST/: bdy.txt  fort.12  fort.26  fort.44  fort.56  fort.7  fort.716  fort.77  fort.82  interp.baleq  mastu.ebweq  mastu.elite  mastu.geqdsk  mastu.helena  mastu.lynton  mastu.profs  mastu.radat  mastu.tokameq  mastu_1.gs2  mastu_2.gs2  scene.dskbal
Data/fiesta_test/: bdy.txt  fort.12  fort.26  fort.44  fort.56  fort.7  fort.716  fort.77  fort.82  interp.baleq  scene.dskbal  voss.dat~  voss.geqdsk  voss.helena  voss.lynton  voss.profs  voss.radat  voss.tokameq  voss_1.gs2  voss_2.gs2
Data/fiesta_topeol/: bdy.txt  ctf_voss.dat~  ctf_voss.ebweq  ctf_voss.elite  ctf_voss.geqdsk  ctf_voss.helena  ctf_voss.lynton  ctf_voss.profs  ctf_voss.radat  ctf_voss.tokameq  ctf_voss_1.gs2  ctf_voss_2.gs2  fort.12  fort.26  fort.44  fort.56  fort.7  fort.716  fort.77  fort.82  interp.baleq  scene.dskbal
Data/locust_FNSF/: fnsf.cairns  fnsf.ebweq  fnsf.elite  fnsf.geqdsk  fnsf.helena  fnsf.lynton  fnsf.profs  fnsf.radat  fnsf.tokameq  fnsf_1.gs2  fnsf_2.gs2  fort.12  fort.26  fort.44  fort.56  fort.7  fort.716  fort.77  fort.82  interp.baleq  scene.dskbal
Data/locust_data/: bdy.txt  ctf_voss.dat~  ctf_voss.elite  ctf_voss.geqdsk  ctf_voss.helena  ctf_voss.lynton  ctf_voss.profs  ctf_voss.radat  ctf_voss.tokameq  ctf_voss_1.gs2  ctf_voss_2.gs2  fort.12  fort.26  fort.44  fort.56  fort.7  fort.716  fort.77  fort.82  interp.baleq  scene.dskbal
Data/nbi_test/: fort.12  fort.26  fort.44  fort.56  fort.7  fort.716  fort.77  fort.82  interp.baleq  scene.dskbal  voss.dat~  voss.ebweq  voss.elite  voss.geqdsk  voss.helena  voss.lynton  voss.profs  voss.radat  voss.tokameq  voss_1.gs2  voss_2.gs2
Data/test2/: #voss.dat#  fort.12  fort.26  fort.44  fort.56  fort.7  fort.716  fort.77  fort.82  interp.baleq  scene.dskbal  voss.dat~  voss.ebweq  voss.elite  voss.geqdsk  voss.helena  voss.lynton  voss.profs  voss.radat  voss.tokameq  voss_1.gs2  voss_2.gs2
boundaries/ctf17/: ctf17.bdy
boundaries/ctf_voss/: fort.12
boundaries/fnsf/: #fnsf.dat#  fnsf.dat~
cmake/: FindGHOST.cmake  FindnetCDF.cmake  FindnetCDFFortran.cmake  SCENEfunctions.cmake  Sanitizers.cmake  UpdateSubmodules.cmake
graphs/: bdytest.py  bdytest.py~  currents.py  fluxsur.py  fluxsur.py~  graphs.py  graphs.py~  overall.py  overall.py~  plotting_from_netcdf.py  safety.py
lib/dierckx/: #fpsurf.f#  CMakeLists.txt  fpsurf.f  fpsurf.f~  makefile  makefile~
lib/gcv/: #dtpss.f#  Makefile~  dcfcr.f  dcfcr1.f  dcpmut.f  dcrtz.f  dctsx.f  ddcom.f  ddiag.f  dftkf.f  dgcv.f  dgemv.f  dpdcr.f  dpred.f  dsetup.f  dsgdc.f  dsuy.f  dtsvdc.f  duni.f  dvmin.f  fact.f  gcv.sh  gcv.sh~  gcv2.sh  gcv2.sh~  inteqn.in  mktpar.f  mkxys.f  prmut.f  testptpss.f~  testptpss.in  testtpss.f  testtpss.in
scripts/: freegs_geqdsk.py  gs2_template.in  gs2input.py
src/: CMakeLists.txt  balloon.f90  bandat.f90  build_config.F90  chease_dat.f90  coldat.f90  elite_data.f90  equil.f90  flxav.f90  flxorb.f90  flxsur.f90  fprof.f90  geqdsk.f90  getdata.f90  gfile.f90  graphs.f90  graphs_no_ghost.f90  gs2.f90  gs2_keep.f90  header.f90  helena.f90  hirsig.f90  init.f90  lapack_interface.f90  mercier.f90  nbicur_no_nbeams.f90  outcdf.f90  output.f90  profs.f90  scene.f90  setnt.f90  signeo.f90  splines.f90  test.f90  test_profs.f90  tokameq.f90  toms790.f90  torcur.f90  usrcal.f90
src/old_plotting/: iaea_plots.f90  stab.f90
tests/: CMakeLists.txt
trunk/: #calcbeams.f#  #equil.f90#  #extj.f90#  #ffdgen.f90#  #geqdsk.f90#  #hirsig.f90#  #hofr.f#  #init.f90#  #makefile#  #nbicur.f90#  #profs.f90#  #scene.f90#  #tglf.f90#  #torcur.f90#  #tstplt.f90#  #zinteg.f#  .#scene.f90  CMakeLists.txt  alboot.f90  astradat.f90  baleq.f90  balloon.f90  balloon_keep.f90  balpar.f90  balpar.mod  bandat.f90  bandit.f90  bdry.f90  beamconsts.f  beams_mfp.f  beams_mfp.f~  calcbeams.f  calcbeams.f~  caxe_out.f90  chease_dat.f90  colcon.f90  coldat.f90  coldat.mod  coulomb.f  eisplit.f  (+82 more)
trunk/nbeams/: Makefile  Makefile2  Makefile3  calcbeams.f  calcbeams.f~  fastions.f  hofr.f  nbdriver.f  nbeams.ps  nbparams.inc  sigfit.f
trunk/old_plotting/: #graphs.f90#  graphs.f90  graphs.f90~  iaea_plots.f90  stab.f90  tstplt.f90
(+40 files in other folders)
